# DugCanLinkTester

./: .gitignore  README.md  joystick_monitor.py  joystick_receiver.py  main.py  pyproject.toml
DugCanLinker/: __init__.py  dig_monitor_window.py  joystick_monitor.py  joystick_receiver.py  protocol.py  serial_receiver.py  vortex_hid.py
_forAI/: dev_log.md  memo.md  plan.md  readme.md
examples/: simulator_receiver_minimal.py
packaging/: monitor_hid.spec  monitor_only.spec
tests/: __init__.py  test_cli.py  test_gui_smoke.py  test_packet_parser.py  test_protocol.py  test_text_parser.py
tools/: build_release.ps1
