[project]
name = "dugcanlinktester"
version = "0.2.0"
description = "J1939 CAN Joystick binary protocol library + monitor GUI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "pyserial>=3.5",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["DugCanLinker"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.scripts]
joystick-monitor  = "DugCanLinker.joystick_monitor:main"
joystick-receiver = "DugCanLinker.joystick_receiver:main"
