[project]
name = "dugcanlinktester"
version = "0.3.4"
description = "DigCanLink serial monitor and simulator integration toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "pyserial>=3.5",
]

[project.optional-dependencies]
hid = [
    "vgamepad",
]

[dependency-groups]
build = [
    "pyinstaller>=6.17",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["DugCanLinker"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.scripts]
joystick-monitor  = "DugCanLinker.joystick_monitor:main"
joystick-receiver = "DugCanLinker.joystick_receiver:main"
